<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient3"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/quiz_previous_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_previous_input" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question"
        tools:layout_editor_absoluteX="16dp">


        <Button
            android:id="@+id/quiz_button_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/quiz_true"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="284dp" />

        <Button
            android:id="@+id/quiz_button_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/quiz_false"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="281dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/quiz_num_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/quiz_button_reset"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/quiz_reset"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="157dp" />
</androidx.constraintlayout.widget.ConstraintLayout>